--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,6 @@
         <script src="vendor/angular-route/angular-route.min.js"></script>
         <script src="js/main.js"></script>
         <script src="js/controllers/contatosController.js"></script>
+        <script src="js/controllers/contatoController.js"></script>
     </body>
 </html>
